// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_EuiPageSidebar _EuiPageInnerProps is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  component="main"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-6kpn8r-euiPageInner-left"
  />
</div>
`;

exports[`_EuiPageSidebar _EuiPageOuterProps is rendered 1`] = `
<div
  class="euiPageTemplate css-9q99t7-euiPageOuter-column-grow"
  style="min-block-size:460px"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar bottomBorder is rendered as extended 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar bottomBorder is rendered as true 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageTemplate testClass1 testClass2 css-1fesrzg-euiPageOuter-row-grow"
  data-test-subj="test subject string"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar minHeight is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(40vh, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar offset is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb);padding-block-start:100px"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar paddingSize l is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar paddingSize m is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar paddingSize none is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar paddingSize s is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar paddingSize xl is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar paddingSize xs is rendered 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar restrict width can be set to a custom number 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar restrict width can be set to a custom value and measurement 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;

exports[`_EuiPageSidebar restrict width can be set to a default 1`] = `
<div
  class="euiPageTemplate css-1fesrzg-euiPageOuter-row-grow"
  style="min-block-size:max(460px, calc(100vb)"
>
  <div
    class="css-nq554q-euiPageInner"
  />
</div>
`;
